# vscode-rust-snippets

./: Cargo.toml
package/: LICENSE.md  README.md  package.json
package/snippets/: attributes.code-snippets  blocks.code-snippets  functions.code-snippets  operators.code-snippets  text.code-snippets
src/: main.rs
src/snippets/: attributes.rs  blocks.rs  functions.rs  mod.rs  operators.rs  text.rs
